# Droid

./: Notes.txt  Readme.md
droid/: settings.gradle
droid/app/: build.gradle
droid/droidjs/: build.gradle
droid/droidjs/src/main/cpp/: CMakeLists.txt  native-log.h
droid/droidnet/src/main/cpp/: CMakeLists.txt  MonoHost.cpp  droidnet.cpp
droid/droidvr/: build.gradle
droid/droidvr/src/main/cpp/: CMakeLists.txt  app.h  droidvr.cpp  keys.h  ovr.cpp  ovr.h  ovrcompositor.cpp  ovrinput.cpp
droid/droidvr/src/main/cpp/lib/: Math.cpp  Math.h  egl.cpp  egl.h  utils.cpp  utils.h  vmath.cpp  vmath.h
src/: Droid.sln  Gamer.sln  Gengine.sln  System.NumericsX.sln
src/Droid/: Droid.csproj  Program.cs
src/Droid.Abstract/: Droid.Abstract.csproj  G.cs
src/Droid.Core/: BlockAlloc.cs  Config.cs  Droid.Core.csproj  Key.cs  Platform.cs  System.cs  U.cs  UnsafeX.cs
src/Droid.Local/: Droid.Local.csproj  G2.cs
src/Droid.Sys/: Events.cs
src/Gengine.CM/: CollisionModel_contacts.cs  CollisionModel_contents.cs  CollisionModel_debug.cs  CollisionModel_local.cs  CollisionModel_rotate.cs  CollisionModel_trace.cs  Gengine.CM.csproj
src/Gengine.Core/: Gengine.Core.csproj  Lib.cs
src/Gengine.Framework/: ConsoleLocal-Scr.cs  ConsoleLocal.cs  DeclAF.cs  DeclEntityDef.cs  DeclFX.cs  DeclManagerLocal.cs  DeclPDA.cs  DeclParticle.cs  Gengine.Framework.csproj  Lib.cs  SessionLocal-CDKey.cs  SessionLocal-CVar.cs  SessionLocal-Menu.cs  SessionLocal-Util.cs  SessionLocal.cs  UsercmdGenLocal.cs
src/Gengine.FrameworkConsole/: ConsoleLocal-Scr.cs  ConsoleLocal.cs  Gengine.FrameworkConsole.csproj
src/Gengine.FrameworkDeclare/: Gengine.FrameworkDeclare.csproj  Lib2.cs
src/Gengine.FrameworkSession/: Gengine.FrameworkSession.csproj  SessionLocal-CDKey.cs  SessionLocal-CVar.cs  SessionLocal-Util.cs  SessionLocal.cs
src/Gengine.Library/: Config.cs  Lib.cs
src/Gengine.Library-Last/: Extensions.cs  Lib.cs
src/Gengine.NumericsX/: Config.cs  Gengine.NumericsX.csproj  Lib.cs
src/Gengine.Render/: CinematicLocal.cs  Droid.cs  FrameBuffer - Copy.cs  FrameBuffer.cs  Gengine.Render.csproj  GuiModel.cs  Image+Files.cs  Image+Program.cs  Interaction.cs  Lib.cs  _NewFile.cs
src/Gengine.Sound/: Efxlib.cs  Gengine.Sound.csproj  Lib.cs  SoundLocal.cs  Sound_Cache.cs  Sound_Decoder.cs  Sound_Efxfile.cs  Sound_Emitter.cs  Sound_Shader.cs  Sound_System.cs  Sound_Wavefile.cs  Sound_World.cs
src/Gengine.UI/: BindWindow.cs  ChoiceWindow.cs  DeviceContext.cs  EditWindow.cs  FieldWindow.cs  GameWindow.cs  Gengine.UI.csproj  GuiScript.cs  ListGUILocal.cs  ListWindow.cs  MarkerWindow.cs  Rectangle.cs  RegExp.cs  RenderWindow.cs  SimpleWindow.cs  SliderWindow.cs  UserInterfaceLocal.cs  WinVar.cs  Window.cpp  Window.cs
src/System.NumericsX.Jpeg/: Jpeg.cs
src/System.NumericsX.Native/: System.NumericsX.Native.cpp
src/System.NumericsX.OpenAL/: ALCaptureDevice.cs  ALContext.cs  ALDevice.cs  OpenALLibraryNameContainer.cs  System.NumericsX.OpenAL.csproj
src/System.NumericsX.OpenStack.Gngine.CM/: CollisionModel_rotate.cs
src/System.NumericsX.OpenStack.Gngine.Framework/: SessionLocal-CDKey.cs  SessionLocal-CVar.cs  SessionLocal-Menu.cs  SessionLocal.cs  System.NumericsX.OpenStack.Gngine.Framework.csproj
src/System.NumericsX.OpenStack.Gngine.Render/: Draw.cs  GuiModel.cs  Interaction.cs  Lib.cs  Model.cs  ModelDecal.cs  ModelManagerLocal.cs  ModelOverlay.cs  RenderSystemInit.cs  RenderSystemLocal.cs  RenderWorldLocal.cs  System.NumericsX.OpenStack.Gngine.Render.csproj  TR_Backend.cs  TR_Deform.cs  TR_LightRun.cs  TR_Local.cs  TR_Render.cs  TR_RenderTools.cs  TR_SubView.cs  TR_Trace.cs
src/System.NumericsX.OpenStack.Gngine.Sound/: Sound_Cache.cs  Sound_Decoder.cs  Sound_Efxfile.cs  Sound_Emitter.cs  Sound_Shader.cs  Sound_System.cs  Sound_Wavefile.cs  Sound_World.cs
(+607 files in other folders)
